# THU_CTS3

./: .gitignore  README.md
Computer Graphics/THU_CG_OPENGL_BOILERPLATE/: main.cpp
Computer Graphics/first-setup/: app
Computer Graphics/turtle/: sample1.trt
Database Programming/lecture1_sql_basics_recap/: exercise1b.sql
Database Programming/lecture2.1_stored_procedures/: create_invoice.sql  delete_article_queries.sql  delete_article_reorder_positions.sql  exec_create_invoice_proc.sql  insert_procedure_exercise.sql  order_count.sql
Database Programming/lecture2_transactions_procedures/: transactions_session2_1.sql.sql  transactions_session2_deadlock.sql
Programming 3/lesson1/: Makefile  main  myLib.cpp  myLib.h
computer-graphics/: .gitignore
computer-graphics/THU_CG_OPENGL_BOILERPLATE/: .gitignore  CMakeLists.txt  app  main.cpp
computer-graphics/first-setup/: .gitignore  CMakeLists.txt  SimpleFragmentShader.glsl  app  main.cpp
computer-graphics/first-setup/common/: shader.hpp
database-programming/: ThisAndThat.sql
database-programming/assignment_1/: assigment_1_WAE_AP.sql  customer_class.sql  exec_driver_statistics.sql  generate_driver_statistics.sql
database-programming/djangowebapp_01/: manage.py  queries.py
database-programming/lecture1_sql_basics_recap/: exercise1a.sql
database-programming/lecture2.1_stored_procedures/: create_invoice.sql  delete_article_queries.sql  exec_create_invoice_proc.sql  order_count.sql
database-programming/lecture2_transactions_procedures/: transactions_session1_1.sql  transactions_session1_deadlock.sql
database-programming/lecture3_events_triggers_exceptions/: TEST_query_insert_order.sql  TEST_transactional_insert_order.sql.sql  Turnover_Report.sql  create_calendar.sql  create_order_invoice_trigger.sql  create_transactional_invoice.sql  date_conversion.sql  delete_customer_invoice_trig.sql  order_count_per_customer.sql  queries_dateconversion_ordercount.sql  queries_events.sql  queries_triggers.sql
prog-3/: .gitignore
prog-3/assignment1/: ex1_1.cpp  ex1_2.cpp  ex1_4.cpp
prog-3/assignment3/: Article.cpp  Article.h  CMakeLists.txt  Stock.cpp  Stock.h  data.csv  data_new.csv  main.cpp
prog-3/assignment4/: CMakeLists.txt  String.cpp  String.h  main.cpp
prog-3/assignment5/: Article.cpp  Article.h  Bibliography.cpp  Bibliography.h  Book.cpp  Book.h  CMakeLists.txt  Medium.cpp  Medium.h  main.cpp
prog-3/assignment6/: CMakeLists.txt  main.cpp
prog-3/bankingOOP/: CMakeLists.txt  main
prog-3/dlist/: CMakeLists.txt  (+2 more)
theoretical-comp-sci/: test
(+59 files in other folders)
